# debiasEd

./: .gitattributes  .gitignore  COMPREHENSIVE_PREPROCESSING_SUMMARY.md  DATASET_PREPARATION.md  DYNAMIC_PREPROCESSING_INTEGRATION.md  GUI_README.md  GUI_Usage_Guide.txt  QUICK_START_DATASETS.md  USAGE_GUIDE.md  _docker_init.sh  cluster-groupies.code-workspace  comprehensive_preprocessing_test.py  convert_data.py  data_dictionary (1).pkl  dataset_preparation_guide.py  debiased_jadouille_gui.py  demo_script.py  docker_update.sh  experiment_setup.sh  launch_macos.sh  readme.md  requirements(1).txt  run_fairness_gui.py  run_gui.py  runai_submit.sh  sample_educational_data.csv  setup.ps1  setup.sh  setup_macos.sh  setup_unix.sh  setup_windows.ps1  test.ipynb  test.py  test_biased_data.csv  test_evaluation_fix.py  test_preprocessing.py  test_report_fix.py
debiased_jadouille-0.0.20/: README.md  pyproject.toml
debiased_jadouille-0.0.20/src/debiased_jadouille.egg-info/: PKG-INFO
debiased_jadouille-0.0.20/src/debiased_jadouille/crossvalidation/scorers/: binary_scorer.py  scorer.py
debiased_jadouille-0.0.20/src/debiased_jadouille/mitigation/inprocessing/: gao.py  in_template.py  inprocessor.py  islam.py  liu.py  test.py  zafar.py
debiased_jadouille-0.0.20/src/debiased_jadouille/mitigation/postprocessing/: postprocessor.py  snel.py
debiased_jadouille-0.0.20/src/debiased_jadouille/mitigation/preprocessing/: alabdulmohsin.py  (+6 more)
debiased_jadouille-0.0.20/src/debiased_jadouille/predictors/: decision_tree.py  logistic_regression.py  portugal_garf.py  predictor.py  xuetangx_svc.py
(+351 files in other folders)
