[build-system]
requires = [
    "imbalanced_learn==0.13.0",
    "imblearn==0.0",
    "matplotlib==3.9.2",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "PyYAML==6.0.2",
    "scikit_learn==1.3.2",
    "scipy==1.14.1",
    "six==1.16.0",
    "sklearn_genetic_opt==0.11.1",
    "sklearn-compat==0.1.3",
    "torch==2.2.1",
    "tqdm==4.66.4",
    "pot==0.9.5",
    "aif360[inFairness]==0.6.1",
    "setuptools==75.8.0",
    "gurobipy==12.0.0",
    "multiprocess==0.70.17",
    "tensorflow",
    "numpy",
    "cvxpy",
    "cleanlab",
    "fairlearn",
    "np_utils",
]
build-backend = "setuptools.build_meta"

[project]
name = "debiased_jadouille"
version = "0.0.20"
authors = [
  { name="(Jade) Mai Cock", email="bonjour@jadecock.be" },
  { name="Frank Stinar", email="fstinar2@illinois.edu" },
]
description = "A package to facilitate bias mitigation techniques that work for educationnal data"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" } 

[project.urls]
Homepage = "https://github.com/epfl-ml4ed/debiased-package"
Issues = "https://github.com/epfl-ml4ed/debiased-package/issues"



